--- a/Admin/src/app/blog-management/blog-management.component.css
+++ b/Admin/src/app/blog-management/blog-management.component.css
@@ -109,7 +109,7 @@ label{
   right: 25px;
   font-size: 25px;
 }
-.promotion-new, .promotion-detail {
+.blog-new, .blog-detail {
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
@@ -136,7 +136,7 @@ label{
   justify-content: center;
   align-items: center;
 }
-.promotion-new .title, .promotion-detail .title {
+.blog-new .title, .blog-detail .title {
   background-color: pink;
   color: #e75c6b;
   font-weight: bold;
@@ -214,4 +214,15 @@ button.close-btn {
   border-radius: 0.25rem;
   padding: 0.375rem 0.75rem;
   line-height: 1.5;
+}
+.table th:nth-child(1) {
+  width: 40%;
+}
+
+.table th:nth-child(2),
+.table th:nth-child(3) {
+  width: 20%;
+}
+.table th:nth-child(4) {
+  width: 7%;
 }
