--- a/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.html
+++ b/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.html
@@ -44,7 +44,7 @@
                   <div class="table-action">
                     <fa-icon (click)="showOrderDetail(p)" [icon]="faEdit" class="edit-icon" [style]="{cursor: 'pointer'}"
                       size="lg"></fa-icon>
-                    <fa-icon [icon]="faDelete" class="delete-icon" [style]="{cursor: 'pointer'}" size="lg"></fa-icon>
+                    <!-- <fa-icon [icon]="faDelete" class="delete-icon" [style]="{cursor: 'pointer'}" size="lg"></fa-icon> -->
                   </div>
                 </td>
               </tr>
@@ -101,10 +101,10 @@
 <div class="container_detail">
   <div class="left">
     <table class="tongtien">
-      <tr>
+      <!-- <tr>
         <td style="text-align: left;">Phương thức thanh toán</td>
         <td style="text-align: right;"><strong>{{orderDetail ? orderDetail.PaymentMethod == 0 ? 'Thanh toán khi nhận hàng' : 'Chuyển khoản' : ''}}</strong></td>
-      </tr>
+      </tr> -->
       <tr>
         <td style="text-align: left;">Tổng giá trị sản phẩm</td>
         <td style="text-align: right;"><strong>{{convertVND(sumPriceOfProduct)}}</strong></td>
@@ -121,15 +121,15 @@
         <td style="text-align: left;">Thành tiền</td>
         <td style="color: red; text-align: right;"><strong>{{total()}}</strong></td>
       </tr>
-      <hr style="width: 100%;">
-      <tr>
+      <!-- <hr style="width: 100%;"> -->
+      <!-- <tr>
         <td style="text-align: left;">Số tiền đã thanh toán</td>
         <td style="text-align: right;"><strong>{{finalAmountPaid}}</strong></td>
       </tr>
       <tr>
         <td style="text-align: left;"> Số tiền còn nợ </td>
         <td style="text-align: right;"><strong>{{amountOwed}}</strong></td>
-      </tr>
+      </tr> -->
     </table>
   </div>
   <div class="right">
