--- a/Admin/src/app/header/header.component.html
+++ b/Admin/src/app/header/header.component.html
@@ -58,7 +58,7 @@
             <span class="item">Khuyến mãi</span>
         </a>
     </li>
-      <li [class.permission]="checkPermission('QLBlog') == false" (click)="goTo('blog', 'QLBlog')">
+      <li [class.permission]="checkPermission('QLBlog') == false" (click)="goTo('bloggg', 'QLBlog')">
           <a class="custom">
               <span class="icon"><i class="fas fa-cash-register"></i></span>
               <span class="item">Blog</span>
