--- a/Client/src/app/checkout/checkout.component.html
+++ b/Client/src/app/checkout/checkout.component.html
@@ -44,7 +44,7 @@
         <div class="line"></div>
         <div class="ship_option">
             <div class="option">
-                <div><input type="radio" name="ship" id="DOB-method"  checked></div>
+                <div><input type="radio" name="ship" id="DOB-method" ></div>
                 <div class="des left">Giao hàng tận nơi</div>
                 <div class="price-info">
                     <div class="price">
@@ -78,7 +78,7 @@
         <div class="line"></div>
         <div class="ship_option">
             <div class="option_payment">
-                <div><input type="radio" name="payment" id="DOB-checkout" checked></div>
+                <div><input type="radio" name="payment" id="DOB-checkout" ></div>
                 <div class="des left">Thanh toán khi nhận hàng (COD)</div>
             </div>
             <div class="option_payment">
