--- a/Admin/src/app/promotion-management/promotion-management.component.html
+++ b/Admin/src/app/promotion-management/promotion-management.component.html
@@ -34,7 +34,7 @@
                 <td>{{p.Code}}</td>
                 <td>{{p.Discount}}</td>
                 <td>{{p.Quantity}}</td>
-                <td>{{p.Condition}}</td>
+                <td>{{p.Description}}</td>
                 <td>{{p.StartDate}}</td>
                 <td>{{p.ExpireDate}}</td>
               <td class="d-flex justify-content-end" >
