--- a/Admin/src/app/customer-management/customer-management.component.html
+++ b/Admin/src/app/customer-management/customer-management.component.html
@@ -50,7 +50,7 @@
 
     <!-- Phân hiển thị danh sách -->
     <div class="content-box-table">
-      <table>
+      <table class="table text-center table-hover">
         <thead>
           <tr>
             <th>Khách hàng</th>
