--- a/Admin/src/app/customer-management/customer-management.component.css
+++ b/Admin/src/app/customer-management/customer-management.component.css
@@ -20,7 +20,10 @@ h4 {
   display: inline-block;
   font-size: 14px;
 }
-
+thead{
+  background-color: #E75C6B;
+  color: white;
+}
 .sort_function select {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -107,7 +110,7 @@ th, td {
 }
 
 th {
-  background-color: #fefae0;
+
   font-weight: bold;
 }
 
@@ -171,10 +174,7 @@ hr {
   font-weight: bold;
   margin-bottom: 5px;
 }
-thead {
-  background-color: #fefae0;
 
-}
 .customer_detail table,th,td {
   text-align: center;
 }
